# fm-sm2-global-localisation

./: CMakeLists.txt  README.md
configuration_files/: pipeline_csm_10.yaml
experiments_logs/N/real/: pseudo_ground_truths.txt
experiments_logs/N/real/relief_fmt_global_localisation/src/fmt_global_localisation_logger_node/: CMakeLists.txt  fmt_global_localisation_logger.cpp  fmt_global_localisation_logger_node.cpp
experiments_logs/evaluation_scripts/: NOTE.txt  glob2.m  octave-workspace  script_plot_exec_time_csal.m  script_plot_exec_time_home.m  script_plot_exec_time_landfill.m  script_plot_execution_times_all.m  script_plot_maps.m  script_plot_results_corridor.m  script_plot_results_csal.m  script_plot_results_landfill.m  script_plot_t_errors_all_envs.m  script_plot_t_errors_csal.m  script_plot_xy_errors_all_envs.m  script_plot_xy_errors_csal.m  top_level_script.m
experiments_logs/evaluation_scripts/maps/: csal
experiments_logs/evaluation_scripts_phd/: a_script_plot_maps.m  a_script_plot_pose_errors_all_sims.m  a_script_plot_pose_errors_csal.m  b_script_plot_outliers.m  breakyaxis.m  c_script_plot_position_and_orientation_errors_all_sims.m  c_script_plot_position_and_orientation_errors_csal.m  colours.m  colours2.m  corridor_motivation.eps  corridor_motivation.tex  d_script_plot_execution_times_all.m  d_script_plot_execution_times_csal.m  evaluate_one_experiment.m  function_top_level_script.m  octave-workspace  script_plot_corridor_map.m  script_plot_corridor_motivation.m  script_plot_exec_time_corridor.m  script_plot_exec_time_warehouse.m  script_plot_exec_time_willowgarage.m  script_plot_results_home.m  script_plot_results_warehouse.m  script_plot_results_willowgarage.m  write_results_to_file.m
experiments_logs/evaluation_scripts_phd/figures/: corridor_motivation.eps  corridor_motivation.tex  csal_execution_times.eps  csal_execution_times.tex  (+28 more)
include/fmt_global_localisation_logger_node/: fmt_global_localisation_logger.h
include/fmt_global_localisation_node/: fmt_global_localisation.h
include/utils/: dft_utils.h
launch/: avanti.launch  relief_fmt_global_localisation.launch
scripts/: run_experiments.py  run_experiments_csm_show_dparams_effects.py
src/fmt_global_localisation_logger_node/: fmt_global_localisation_logger.cpp
src/fmt_global_localisation_node/: CMakeLists.txt  fmt_global_localisation_node.cpp
src/utils/: dft_utils.cpp
tmp/: create_range_images.m  create_real_range_image.m  create_virtual_range_image.m  func3.py  real_scan.m  scan_dump.m  virtual_scan.m
(+65262 files in other folders)
